@@ -33,7 +33,7 @@ dependencies {
     }
     implementation 'org.apache.logging.log4j:log4j-core:2.23.1'
     implementation 'com.oracle.database.jdbc:ojdbc11:23.4.0.24.05'
-    implementation 'org.springframework:spring-jdbc:6.1.8'
+    implementation 'org.springframework:spring-jdbc:6.1.9'
 
     /*
     implementation 'org.incenp:sssom-core:0.7.9'
