@@ -2,7 +2,7 @@
 <beans>
 
 	<bean id="manager" class="edu.mcw.rgd.dataload.ontologies.Manager">
-        <property name="version" value="ONTOLOGY LOAD pipeline  -- build  Jul 26, 2024" />
+        <property name="version" value="ONTOLOGY LOAD pipeline  -- build  Jul 29, 2024" />
 
         <!-- for security reasons, actual value of the API KEY should not be stored in public github code -->
         <property name="apiKeyFile" value="properties/api.key"/>
@@ -449,5 +449,8 @@
     </bean>
 
     <bean id="sssomValidator" class="edu.mcw.rgd.dataload.ontologies.test.SSSOMValidator">
+    </bean>
+
+    <bean id="efoXrefGenerator" class="edu.mcw.rgd.dataload.ontologies.test.EfoXrefCreator">
     </bean>
 </beans>
